--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "Build a webservice that fulfils the documented API. The API is described below. A formal definition is provided \r in the [api.yml](./api.yml) file, but the information in this README is sufficient for completion of this challenge. We will use the \r described API to test your solution.",
   "main": "index.js",
+  "type": "module",
   "directories": {
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx tsx ./server/server.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.0"
+    "@types/node": "^22.9.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.0.0"
   }
 }
